vpc.tf
resource "aws_vpc" "cocktail_vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.r_prefix}-vpc"
  }
}
